0-k8s-setup/traefik/ingress.yml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: traefik
  name: traefikdashboard
spec:
  entryPoints:
    - websecure
    # - web
  routes:
    - match: Host(`traefik.sem-ugr-k8s.arsahosting.com`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: tls.sem-ugr-k8s.arsahosting.com
